--- a/BibliothequeMultiPattern/BibliothequeMultiPattern.csproj
+++ b/BibliothequeMultiPattern/BibliothequeMultiPattern.csproj
@@ -11,6 +11,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -57,23 +57,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bibliothecaire.cs" />
+    <Compile Include="book\data\BookDataInMemory.cs" />
+    <Compile Include="book\data\IBookData.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="book\BookBasic.cs" />
     <Compile Include="book\BookWithDvd.cs" />
-    <Compile Include="Etudiant.cs" />
     <Compile Include="book\Book.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
+    <Compile Include="state\impl\Borrowed.cs" />
+    <Compile Include="state\impl\Exposed.cs" />
+    <Compile Include="state\impl\Returned.cs" />
+    <Compile Include="state\impl\Stocked.cs" />
+    <Compile Include="state\IState.cs" />
     <Compile Include="users\data\IUserData.cs" />
     <Compile Include="users\data\UserDataInMemory.cs" />
     <Compile Include="users\IUser.cs" />
-    <Compile Include="users\Librarian.cs" />
-    <Compile Include="users\Student.cs" />
+    <Compile Include="users\impl\Librarian.cs" />
+    <Compile Include="users\impl\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 et x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
