--- a/BibliothequeMultiPatternTest/BibliothequeMultiPatternTest.csproj
+++ b/BibliothequeMultiPatternTest/BibliothequeMultiPatternTest.csproj
@@ -48,12 +48,18 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="BookDataInMemoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserDataInMemoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BibliothequeMultiPattern\BibliothequeMultiPattern.csproj">
+      <Project>{4458a64b-8b71-477c-b10b-452b11a5c826}</Project>
+      <Name>BibliothequeMultiPattern</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
