--- a/BibliothequeMultiPattern/BibliothequeMultiPattern.csproj
+++ b/BibliothequeMultiPattern/BibliothequeMultiPattern.csproj
@@ -57,25 +57,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="book\data\BookDataInMemory.cs" />
-    <Compile Include="book\data\IBookData.cs" />
-    <Compile Include="Library.cs" />
-    <Compile Include="book\BookBasic.cs" />
-    <Compile Include="book\BookWithDvd.cs" />
-    <Compile Include="book\Book.cs" />
+    <Compile Include="services\books\data\BookDataInMemory.cs" />
+    <Compile Include="services\books\data\IBookData.cs" />
+    <Compile Include="_old\Library.cs" />
+    <Compile Include="services\books\BookBasic.cs" />
+    <Compile Include="services\books\BookWithDvd.cs" />
+    <Compile Include="services\books\Book.cs" />
+    <Compile Include="controller\LibraryController.cs" />
+    <Compile Include="vues\LibraryGraphicConsole.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reservation.cs" />
-    <Compile Include="state\impl\Borrowed.cs" />
-    <Compile Include="state\impl\Exposed.cs" />
-    <Compile Include="state\impl\Returned.cs" />
-    <Compile Include="state\impl\Stocked.cs" />
-    <Compile Include="state\IState.cs" />
-    <Compile Include="users\data\IUserData.cs" />
-    <Compile Include="users\data\UserDataInMemory.cs" />
-    <Compile Include="users\IUser.cs" />
-    <Compile Include="users\impl\Librarian.cs" />
-    <Compile Include="users\impl\Student.cs" />
+    <Compile Include="_old\Reservation.cs" />
+    <Compile Include="services\states\impl\Borrowed.cs" />
+    <Compile Include="services\states\impl\Exposed.cs" />
+    <Compile Include="services\states\impl\Returned.cs" />
+    <Compile Include="services\states\impl\Stocked.cs" />
+    <Compile Include="services\states\IState.cs" />
+    <Compile Include="services\users\data\IUserData.cs" />
+    <Compile Include="services\users\data\UserDataInMemory.cs" />
+    <Compile Include="services\users\IUser.cs" />
+    <Compile Include="services\users\impl\Librarian.cs" />
+    <Compile Include="services\users\impl\Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
